finished main features of app itself

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 ChatterBot==1.2.9
+chatterbot-corpus==1.2.2
 click==8.3.1
 cloudpathlib==0.23.0
 confection==0.1.5
 cymem==2.0.13
 docutils==0.21.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 greenlet==3.2.4
 idna==3.11
 imagesize==1.4.1
@@ -31,6 +33,7 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pyttsx3==2.99
+PyYAML==6.0.3
 requests==2.32.5
 roman-numerals-py==3.1.0
 setuptools==80.9.0
